--- a/ginTest/templates/providerView.html
+++ b/ginTest/templates/providerView.html
@@ -22,13 +22,13 @@
     <a href="#">温馨提示：为了能正常浏览，请使用高版本浏览器！（IE10+）</a>
 </section>
 <!--主体内容-->
-<section class="publicMian">
+<section class="publicMian ">
     <div class="left">
         <h2 class="leftH2"><span class="span1"></span>功能列表 <span></span></h2>
         <nav>
             <ul class="list">
-                <li ><a href="/billList">账单管理</a></li>
-                <li><a href="/providerList">供应商管理</a></li>
+                <li><a href="/billList">账单管理</a></li>
+                <li id="active"><a href="/providerList">供应商管理</a></li>
                 <li><a href="/userList">用户管理</a></li>
                 <li><a href="/password">密码修改</a></li>
                 <li><a href="/login">退出系统</a></li>
@@ -36,19 +36,25 @@
         </nav>
     </div>
     <div class="right">
-        <img class="wColck" src="/static/img/clock.jpg" alt=""/>
-        <div class="wFont">
-            <h2>Admin</h2>
-            <p>欢迎来到超市账单管理系统!</p>
-			<span id="hours"></span>
+        <div class="location">
+            <strong>你现在所在的位置是:</strong>
+            <span>供应商管理页面 >> 信息查看</span>
+        </div>
+        <div class="providerView">
+            <p><strong>供应商编码：</strong><span>PRO-CODE—001</span></p>
+            <p><strong>供应商名称：</strong><span>测试供应商001</span></p>
+            <p><strong>联系人：</strong><span>韩露</span></p>
+            <p><strong>联系电话：</strong><span>15918230478</span></p>
+            <p><strong>传真：</strong><span>15918230478</span></p>
+            <p><strong>描述：</strong><span>描述</span></p>
+
+            <a href="/providerList">返回</a>
         </div>
     </div>
 </section>
 <footer class="footer">
 </footer>
 <script src="/static/js/time.js"></script>
-<div style="text-align:center;">
-<p>更多模板：<a href="http://www.mycodes.net/" target="_blank">源码之家</a></p>
-</div>
+
 </body>
 </html>
