--- a/ginTest/templates/userView.html
+++ b/ginTest/templates/userView.html
@@ -22,33 +22,40 @@
     <a href="#">温馨提示：为了能正常浏览，请使用高版本浏览器！（IE10+）</a>
 </section>
 <!--主体内容-->
-<section class="publicMian">
+<section class="publicMian ">
     <div class="left">
         <h2 class="leftH2"><span class="span1"></span>功能列表 <span></span></h2>
         <nav>
             <ul class="list">
-                <li ><a href="/billList">账单管理</a></li>
-                <li><a href="/providerList">供应商管理</a></li>
-                <li><a href="/userList">用户管理</a></li>
+                <li><a href="/billList">账单管理</a></li>
+                <li ><a href="/providerList">供应商管理</a></li>
+                <li id="active"><a href="/userList">用户管理</a></li>
                 <li><a href="/password">密码修改</a></li>
                 <li><a href="/login">退出系统</a></li>
             </ul>
         </nav>
     </div>
     <div class="right">
-        <img class="wColck" src="/static/img/clock.jpg" alt=""/>
-        <div class="wFont">
-            <h2>Admin</h2>
-            <p>欢迎来到超市账单管理系统!</p>
-			<span id="hours"></span>
+        <div class="location">
+            <strong>你现在所在的位置是:</strong>
+            <span>用户管理页面 >> 用户信息查看页面</span>
+        </div>
+        <div class="providerView">
+            <p><strong>用户编号：</strong><span>hanlu</span></p>
+            <p><strong>用户名称：</strong><span>韩露</span></p>
+            <p><strong>用户性别：</strong><span>女</span></p>
+            <p><strong>出生日期：</strong><span>2011年2月1日</span></p>
+            <p><strong>用户电话：</strong><span>12345678906</span></p>
+            <p><strong>用户地址：</strong><span>北极</span></p>
+            <p><strong>用户类别：</strong><span>经理</span></p>
+
+            <a href="/userList">返回</a>
         </div>
     </div>
 </section>
 <footer class="footer">
 </footer>
 <script src="/static/js/time.js"></script>
-<div style="text-align:center;">
-<p>更多模板：<a href="http://www.mycodes.net/" target="_blank">源码之家</a></p>
-</div>
+
 </body>
 </html>
